Effects strips render black #39584

Closed
opened 2014-04-04 02:19:31 +02:00 by Jordan L Torgerson · 10 comments

System Information
OS-X 10.7.5 / ATI HD 5870 64-bit / OS-X 10.6.8 Nvidia GT330M 32-bit
also Windows 7 64-bit Nvidia.

Blender Version
Broken: 2.70 Date 2014-03-19 05 02 Hash 19e627c

Worked: (optional)
2.69.0 r60991

Short description of error
On 3 computers (and 2 VMs), version 2.70 would not render a wipe effect in the video editor. Tried it with Mac, Windows and a Linux VM.
In all cases the version 2.69 Blender worked fine. Attached are screen shots of 2.70 and 2.69 side-by-side, and the simple test files I used.

Exact steps for others to reproduce the error
Load striptest.blend (with the two jpegs in the same directory), go to video editing and scrub through the wipe transition. The 2.70 Blenders I used were "out of the box", but I couldn't find any settings that would explain this - I compared 2.69 render settings with the 2.70 and they were the same.

70mDish2.jpg

70mDish1.jpg

striptestcomparison-Win7.jpg

striptest.blend

striptestcomparison-Mac.jpg

**System Information** OS-X 10.7.5 / ATI HD 5870 64-bit / OS-X 10.6.8 Nvidia GT330M 32-bit also Windows 7 64-bit Nvidia. **Blender Version** Broken: 2.70 Date 2014-03-19 05 02 Hash 19e627c Worked: (optional) 2.69.0 r60991 **Short description of error** On 3 computers (and 2 VMs), version 2.70 would not render a wipe effect in the video editor. Tried it with Mac, Windows and a Linux VM. In all cases the version 2.69 Blender worked fine. Attached are screen shots of 2.70 and 2.69 side-by-side, and the simple test files I used. **Exact steps for others to reproduce the error** Load striptest.blend (with the two jpegs in the same directory), go to video editing and scrub through the wipe transition. The 2.70 Blenders I used were "out of the box", but I couldn't find any settings that would explain this - I compared 2.69 render settings with the 2.70 and they were the same. ![70mDish2.jpg](https://archive.blender.org/developer/F83891/70mDish2.jpg) ![70mDish1.jpg](https://archive.blender.org/developer/F83892/70mDish1.jpg) ![striptestcomparison-Win7.jpg](https://archive.blender.org/developer/F83893/striptestcomparison-Win7.jpg) [striptest.blend](https://archive.blender.org/developer/F83894/striptest.blend) ![striptestcomparison-Mac.jpg](https://archive.blender.org/developer/F83895/striptestcomparison-Mac.jpg)

Changed status to: 'Open'

Changed status to: 'Open'

Added subscriber: @JordanTorgerson

Added subscriber: @JordanTorgerson

Added subscriber: @willi-2

Added subscriber: @willi-2

Confirmed. It works if you move the wipe strip to channel 2.

Confirmed. It works if you move the wipe strip to channel 2.

Added subscriber: @mont29

Added subscriber: @mont29
Sergey Sharybin was assigned by Bastien Montagne 2014-04-04 23:02:50 +02:00

Might be related to #39057 and b3bc9e4f77… Sergey will know! :)

Might be related to #39057 and b3bc9e4f77… Sergey will know! :)

This issue was referenced by blender/blender-addons-contrib@4f6c218f19

This issue was referenced by blender/blender-addons-contrib@4f6c218f1942089e949c1dd4dae7df788d821ae2

This issue was referenced by 4f6c218f19

This issue was referenced by 4f6c218f1942089e949c1dd4dae7df788d821ae2

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit 4f6c218f19.

Closed by commit 4f6c218f19.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#39584
No description provided.